# urd

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  clippy.toml
.claude/commands/: brainstorm.md  check.md  commit-push-pr.md  design.md  grill-me.md  journal.md  post-review.md  prepare.md  release.md  sequence.md  session-close.md  simplify.md  steve.md
.github/workflows/: ci.yml  release.yml
config/: urd.toml.example  urd.toml.v1.example  urd.toml.v2.example
docs/: PLAN.md
docs/00-foundation/: architecture.md  glossary.md
docs/20-reference/: cli.md  heartbeat-schema.md  metrics.md
docs/95-ideas/: 2026-03-23-brainstorm-realizing-the-vision.md  2026-03-23-brainstorm-urd-future.md  2026-03-23-brainstorm-ux-norman-principles.md  2026-03-23-systemd-unit-drift-check.md  2026-03-26-design-backup-summary.md  2026-03-26-design-next-sessions.md  2026-03-26-design-protection-promises.md  2026-03-26-design-sentinel.md  2026-03-26-design-structured-errors.md  2026-03-27-design-sentinel-implementation.md  2026-03-27-design-sentinel-session2.md  2026-03-27-design-transient-snapshots.md  2026-03-28-brainstorm-hardware-swap-solutions.md  2026-03-28-brainstorm-personal-to-public.md  2026-03-28-brainstorm-tray-icon-spindle.md  2026-03-28-design-hardware-swap-defenses.md  2026-03-28-design-visual-feedback-model.md  2026-03-29-design-d1-collapsed-skip-reasons.md  2026-03-29-design-d2-estimated-sizes.md  2026-03-29-design-d5-structural-headings.md  2026-03-29-design-p1-rich-progress-display.md  2026-03-29-design-p3-eta-progress.md  2026-03-29-progress-and-plan-display.md  2026-03-30-brainstorm-transient-workflow-and-redundancy-guidance.md  2026-03-31-brainstorm-next-level-ux.md  2026-03-31-brainstorm-spindle-tray-icon.md  2026-03-31-brainstorm-vocabulary-audit.md  2026-03-31-design-b-transient-immediate-cleanup.md  2026-03-31-design-e-promise-redundancy-encoding.md  2026-03-31-design-h-guided-setup-wizard.md  2026-03-31-design-i-redundancy-recommendations.md  2026-03-31-design-n-retention-policy-preview.md  2026-03-31-design-o-progressive-disclosure.md  2026-03-31-design-phase1-vocabulary-landing.md  2026-04-01-backup-now-imperative.md  (+38 more)
scripts/: check-docs.sh  check-present-not-journey.sh  check-registry.sh  check-vault-boundary.sh  check.sh  collect-diagnostics.sh  install-hooks.sh  pre-commit-pii.sh  pre-commit.sh  release-bump.sh  release-preflight.sh  staging-reset.sh  validate.sh
src/: advice.rs  awareness.rs  btrfs.rs  chain.rs  cli.rs  cli_validation.rs  config.rs  config_render.rs  discovery.rs  drift.rs  drives.rs  encounter.rs  error.rs  events.rs  executor.rs  guard.rs  heartbeat.rs  lock.rs  main.rs  metrics.rs  notify.rs  observation.rs  output.rs  plan.rs  policy.rs  pools.rs  preflight.rs  recommendation.rs  recorder.rs  reserve.rs  retention.rs  rotation.rs  run_tail.rs  sentinel.rs  sentinel_runner.rs  state.rs  state_views.rs  storage_critical.rs  strategy.rs  sudoers.rs  (+5 more)
systemd/: urd-backup.service  urd-backup.timer  urd-sentinel.service
(+239 files in other folders)
