[package]
name = "urd"
version = "0.9.1"
edition = "2024"
description = "BTRFS Time Machine for Linux"
license = "MIT"
repository = "https://github.com/vonrobak/urd"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

# Serialization & config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Identity
uuid = { version = "1", features = ["v4"] }

# System
nix = { version = "0.29", features = ["fs"] }
dirs = "6"
ctrlc = "3"

# Output formatting
colored = "2"
# Logging
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
filetime = "0.2.27"
tempfile = "3"

[profile.release]
lto = true
strip = true
