[package]
name = "urd"
version = "0.13.0"
edition = "2024"
description = "BTRFS Time Machine for Linux"
license = "GPL-3.0-only"
repository = "https://github.com/vonrobak/urd"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

# Serialization & config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"

# Database
rusqlite = { version = "0.39", features = ["bundled"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Identity
uuid = { version = "1", features = ["v4"] }

# System
nix = { version = "0.31", features = ["fs"] }
dirs = "6"
ctrlc = "3"

# Output formatting
colored = "3"
# Logging
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
filetime = "0.2.27"
tempfile = "3"

[profile.release]
lto = true
strip = true
