[package]
name = "urd"
version = "0.30.0"
edition = "2024"
description = "BTRFS Time Machine for Linux"
license = "GPL-3.0-only"
repository = "https://github.com/vonrobak/urd"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

# Serialization & config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"

# Database
rusqlite = { version = "0.39", features = ["bundled"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Identity
uuid = { version = "1", features = ["v4"] }

# System
nix = { version = "0.31", features = ["fs", "poll"] }
dirs = "6"
ctrlc = "3"

# Output formatting
colored = "3"
# Logging
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
tempfile = "3"

# Integration tests live under tests/integration/ (CLAUDE.md convention) and are
# #[ignore]'d by default (they build + shell out to the binary). Run with
# `cargo test -- --ignored`. Each file is declared as its own test target.
[[test]]
name = "cli_subvolume_validation"
path = "tests/integration/cli_subvolume_validation.rs"

[profile.release]
lto = true
strip = true
